--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-Hello, world!
+##PrivacyScanner.org
 
-Just testing out a push.
+A tool for website owners and web developers to improve their sites from a privacy perspective. Think Yslow, but for privacy.
+
+Users will put in a url, and we will come back with a report of what's going on, visually representing the data collection activity. We will also provide a score and guidelines recommendations for improving your score.
+
+We will have attributed usher/collector relationships on a webpage, utilizing a shared "HAR-as-a-service" web services endpoint. Will also include enhanced company data from PrivacyChoice and Krux detailing risk of the associated companies found on page.
